--- a/src/common/styles/base.styl
+++ b/src/common/styles/base.styl
@@ -5,5 +5,5 @@ body, html
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
   user-select: none
   -webkit-tap-highlight-color: transparent
-  background: $color-background
-  color: $color-text
+  background: $color-background-f4f4f4
+  color: $color-text-333
