--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -1,13 +1,13 @@
 // 颜色定义规范
-$color-background = #f4f4f4
+$color-background-f4f4f4 = #f4f4f4
 $color-background-theme = #31c27c
 $color-background-d = rgba(0, 0, 0, 0.3)
-$color-highlight-background = #333
-$color-dialog-background = #666
+$color-text-333 = #333
+$color-text-666 = #666
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
-$color-text = #fff
+$color-text-fff = #fff
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
@@ -18,4 +18,5 @@ $font-size-12 = 12px
 $font-size-14 = 14px
 $font-size-16 = 16px
 $font-size-18 = 18px
+$font-size-20 = 20px
 $font-size-22 = 22px
