--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -8,6 +8,7 @@ $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
 $color-text-fff = #fff
+$color-qq-theme = #31c27c
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
