--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -17,6 +17,7 @@ $color-text-ll = rgba(255, 255, 255, 0.8)
 $font-size-10 = 10px
 $font-size-12 = 12px
 $font-size-14 = 14px
+$font-size-15 = 15px
 $font-size-16 = 16px
 $font-size-18 = 18px
 $font-size-20 = 20px
