--- a/src/common/styles/mixin.styl
+++ b/src/common/styles/mixin.styl
@@ -20,3 +20,10 @@ extend-click()
     left: -10px
     right: -10px
     bottom: -10px
+
+// 上下左右居中
+center()
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
