--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -4,6 +4,7 @@ $color-background-theme = #31c27c
 $color-background-d = rgba(0, 0, 0, 0.3)
 $color-text-333 = #333
 $color-text-666 = #666
+$color-text-999 = #999
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
