解决歌手列表布局BUG，使用  touch-action: none解决多次点击控制台报错

--- a/src/common/styles/base.styl
+++ b/src/common/styles/base.styl
@@ -7,3 +7,4 @@ body, html
   -webkit-tap-highlight-color: transparent
   background: $color-background-f4f4f4
   color: $color-text-333
+  touch-action: none
