--- a/src/common/styles/variable.styl
+++ b/src/common/styles/variable.styl
@@ -1,5 +1,7 @@
 // 颜色定义规范
 $color-background-f4f4f4 = #f4f4f4
+$color-background-eee = #eee
+$color-background-f7f7f7 = #f7f7f7
 $color-background-theme = #31c27c
 $color-background-d = rgba(0, 0, 0, 0.3)
 $color-text-333 = #333
